# Rep_SE_202601_grupo_1

./: .gitignore  .gitmodules  README.md
Lab_1/Ejercicio_1/: README.md  hello_world.cpp  sdkconfig
Lab_1/Ejercicio_2/: README.md  solbel.ipynb
Lab_1/Ejercicio_3/: Camera_View.ipynb  README.md
Lab_2/: README.md
Lab_2/esp32_server/: CMakeLists.txt  sdkconfig.defaults  web_server.cpp
Lab_2/modelos/: ModeloEmbutidos.ipynb  cnn_dropout.onnx  cnn_dropout.onnx.data  cnn_profunda.onnx  cnn_profunda.onnx.data  cnn_simple.onnx  cnn_simple.onnx.data  mlp.onnx
Lab_2/sumotron/: index.html  package-lock.json  package.json
Lab_3/: README.md  build_projects.sh  idf_component.yml
Lab_3/fotos/: person_image_1.cc  person_image_2.cc  person_image_3.cc
Lab_3/projects_tf/: idf_component.yml
Lab_3/projects_tf/Arena_1/cam_arena/main/: CMakeLists.txt  app_camera_esp.c  detection_responder.cc  detection_responder.h  idf_component.yml  image_provider.cc  main.cc  main_functions.cc  model_settings.cc  model_settings.h  stream_server.cc  stream_server.h
Lab_3/projects_tf/cam_integrado/main/: CMakeLists.txt  detection_responder.cc  main.cc
Lab_3/projects_tf/person_detection/main/: CMakeLists.txt  app_camera_esp.h  esp_cli.c  esp_main.h  idf_component.yml  image_provider.cc  main.cc  main_functions.cc  main_functions.h  person_images_bridge.cc
Proyecto/: README.md  SUMOTRON.pptx
Proyecto/dataset_identificador/: NOTAS_ENTRENAMIENTO.md  README.md  capture_tool.py  diagnostico_sesgo.py  quantize_and_export.py  train_identificador.py
Proyecto/robot_cam/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.old
Proyecto/robot_cam/main/: CMakeLists.txt  detection_responder.cc  detection_responder.h  esp_main.h  identificador_model_data.cc  idf_component.yml  image_provider.cc  main.cc  main_functions.cc  uart_comm.c  uart_comm.h
Proyecto/robot_s3/: CMakeLists.txt  sdkconfig.defaults
(+76 files in other folders)
